test: complete net service mock

--- a/assets/mock/ustb_net/drcomMac.html
+++ b/assets/mock/ustb_net/drcomMac.html
@@ -1,6 +1,8 @@
 <!--
     此 HTML 会在网络服务系统的查询已绑定的 MAC 地址页返回。
+    所有 input[type="text"] 但是 name 不是 macs 的元素中的 value 属性是设备名称。
     所有 input[name="macs"] 元素中的 value 属性是已绑定的 MAC 地址。
+    设备名称总数量应该与 MAC 地址总数量相同。
     为节省篇幅，此处仅提供不完整的 HTML 代码。
 -->
 
