feat: net dashboard change password

--- a/assets/mock/ustb_net/drcomChangePswd.html
+++ b/assets/mock/ustb_net/drcomChangePswd.html
@@ -1,7 +1,13 @@
 <!--
     此 HTML 会在网络服务系统修改密码后返回。
-    首个 div.efont 中的文本包含了修改结果反馈。
     为节省篇幅，此处仅提供不完整的 HTML 代码。
+    首个 div.efont 中的文本包含了修改结果反馈。
+
+    可能出现的文本包括：
+    - 您的密码已修改成功！
+    - Your password is modified successfully!
+    - 原密码不匹配！
+    - The old password is incorrect!
 -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
